Fix headless mode (didn't work with vertical navbar) (#4977)
* Fix headless mode (didn't work with vertical navbar)

* Fix header margins on public dashboard page

* Fix test

--- a/client/app/components/ApplicationArea/ApplicationLayout/index.less
+++ b/client/app/components/ApplicationArea/ApplicationLayout/index.less
@@ -53,6 +53,17 @@ body.fixed-layout #application-root {
   }
 }
 
+body.headless #application-root {
+  .application-layout-side-menu,
+  .application-layout-top-menu {
+    display: none !important;
+  }
+
+  .application-layout-content {
+    margin-top: 0;
+  }
+}
+
 // Fixes for proper snapshots in Percy (move vertical scroll to body level
 // to capture entire page, otherwise it wll be cut by viewport)
 @media only percy {
