ErrorMessage is not centered (#4981)
* ErrorMessage is not centered

* Adjust ErrorMessage size on large screens

Co-authored-by: Gabriel Dutra <nesk.frz@gmail.com>

Co-authored-by: Gabriel Dutra <nesk.frz@gmail.com>

--- a/client/app/assets/less/inc/base.less
+++ b/client/app/assets/less/inc/base.less
@@ -86,8 +86,7 @@ strong {
 .page-queries-list,
 .page-alerts-list,
 .alert-page,
-.admin-page-layout,
-.fixed-container {
+.admin-page-layout {
   .container {
     width: 100%;
     max-width: 1200px;
