Databricks custom Schema Browser (#5010)

--- a/client/app/assets/less/inc/schema-browser.less
+++ b/client/app/assets/less/inc/schema-browser.less
@@ -30,9 +30,16 @@ div.table-name {
   overflow-y: auto;
   overflow-x: hidden;
   border: none;
-  margin-top: 10px;
+  padding-top: 10px;
   position: relative;
   height: 100%;
+
+  .schema-loading-state {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
 
   .collapse.in {
     background: transparent;
