--- a/client/app/components/queries/editor-components/databricks/DatabricksSchemaBrowser.less
+++ b/client/app/components/queries/editor-components/databricks/DatabricksSchemaBrowser.less
@@ -31,7 +31,8 @@
     }
   }
 
-  .schema-browser {
+  .schema-list-wrapper {
+    height: 100%;
     border: 1px solid #eaeaea;
     border-top: 0;
     border-radius: 0 0 4px 4px;
