Fix schema browser items height (#5024)

--- a/client/app/assets/less/inc/schema-browser.less
+++ b/client/app/assets/less/inc/schema-browser.less
@@ -6,6 +6,7 @@ div.table-name {
   padding: 2px 22px 2px 10px;
   border-radius: @redash-radius;
   position: relative;
+  height: 22px;
 
   .copy-to-editor {
     display: none;
@@ -63,6 +64,7 @@ div.table-name {
     text-overflow: ellipsis;
     white-space: nowrap;
     position: relative;
+    height: 18px;
 
     .copy-to-editor {
       display: none;
