--- a/client/app/assets/less/inc/base.less
+++ b/client/app/assets/less/inc/base.less
@@ -96,6 +96,7 @@ strong {
   .page-dashboard-list,
   .page-queries-list,
   .page-alerts-list,
+  .query-snippets-list,
   .alert-page,
   .fixed-container {
     .container {
@@ -110,6 +111,7 @@ strong {
   .page-dashboard-list,
   .page-queries-list,
   .page-alerts-list,
+  .query-snippets-list,
   .alert-page,
   .fixed-container {
     .container {
@@ -124,6 +126,7 @@ strong {
   .page-dashboard-list,
   .page-queries-list,
   .page-alerts-list,
+  .query-snippets-list,
   .alert-page,
   .fixed-container {
     .container {
