--- a/client/app/pages/query-snippets/QuerySnippetsList.less
+++ b/client/app/pages/query-snippets/QuerySnippetsList.less
@@ -8,3 +8,17 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
+
+
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: 50px;
+    margin-left: 50px;
+}
+
+
+.search input[type="text"],
+.search button {
+  height: 35px;
+}
